<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

<!--    -->

    <fragment
        android:id="@+id/navigation_completed_event"
        android:name="com.example.dicodingevent.ui.completed.CompletedEvent"
        android:label="@string/completed_event"
        tools:layout="@layout/fragment_completed_event" />

    <fragment
        android:id="@+id/navigation_coming_soon_event"
        android:name="com.example.dicodingevent.ui.comingsoon.ComingSoonEvent"
        android:label="@string/coming_soon_event"
        tools:layout="@layout/fragment_coming_soon_event" />

    <fragment
        android:id="@+id/navigation_favorite_event"
        android:name="com.example.dicodingevent.ui.favorite.FavoriteEvent"
        android:label="@string/favorite_event"
        tools:layout="@layout/fragment_favorite_event" />

    <fragment
        android:id="@+id/navigation_settings_event"
        android:name="com.example.dicodingevent.ui.settings.Settings"
        android:label="@string/setting"
        tools:layout="@layout/fragment_settings" />



</navigation>